dev/tests/cases/neg/01_undef_var.tv
df main() -> void {
    echo!(nope);
}
